# URL-Shortener

./: data.py  main.py  password.py  plot.py  problems.csv  pyproject.toml  t.py  visits.py
static/css/: 404.css  contact.css  documentation.css  log.css  main.css  main.css.map
static/js/: contact.js  documentation.js  log.js  script.js
static/sass/: _base.scss  _col-system.scss  _components.scss  _layout.scss  main.scss
templates/: 404.html  contact.html  documentation.html  index.html  log.html
