[tool.poetry]
name = "repl_python3_URL-Shortener"
version = "0.1.0"
description = ""
authors = ["PadmashreeJha <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-Cors = "^3.0.10"
pytz = "^2021.1"
bs4 = "^0.0.1"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
